front-envoy.yaml
static_resources:
  secrets:
    - name: tls_cert
      tls_certificate:
        certificate_chain:
          filename: /etc/certs/front.pem
        private_key:
          filename: /etc/certs/front-key.pem
    - name: validation_context
      validation_context:
        trusted_ca:
          filename: /etc/certs/ca.pem
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service/1"
                route:
                  cluster: serviceA
              - match:
                  prefix: "/service/2"
                route:
                  cluster: serviceB
          http_filters:
          - name: envoy.router
            config: {}
      tls_context:
        common_tls_context:
          tls_certificate_sds_secret_configs:
          - name: tls_cert
          validation_context_sds_secret_config:
            name: validation_context
  clusters:
  - name: serviceA
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    tls_context:
      common_tls_context:
        tls_certificate_sds_secret_configs:
        - name: tls_cert
    hosts:
    - socket_address:
        address: serviceA
        port_value: 443
  - name: serviceB
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    tls_context:
      common_tls_context:
        tls_certificate_sds_secret_configs:
        - name: tls_cert
    hosts:
    - socket_address:
        address: serviceB
        port_value: 443
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
